--- a/index.html
+++ b/index.html
@@ -8,3 +8,14 @@
     <p>Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus—DNA eternal, CLEM crypto, DGE for NZ, Roman Empire reborn. Join discord.gg/Bw57a5Gd22!</p>  
 </body>  
 </html>  
+<!DOCTYPE html>  
+<html>  
+<head>  
+    <title>Blessed Raven - Torus Empire</title>  
+</head>  
+<body>  
+    <h1>Welcome to Blessed Raven</h1>  
+    <p>Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus—DNA eternal, CLEM crypto on hold, DGE for NZ, Roman Empire reborn. Join discord.gg/Bw57a5Gd22!</p>  
+    <p>Follow on X: @JacobRyanDawn | Check torus energy: blessedraven.com</p>  
+</body>  
+</html>  
