--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>  
         <div class="mission">  
             <h2>My Divine Mission</h2>  
-            <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.com—your salvation begins now!</p>  
+            <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.github.io—your salvation begins now!</p>  
         </div>  
         <a href="https://discord.gg/Bw57a5Gd22" class="button">Join the Torus Empire</a>  
         <a href="https://x.com/JacobRyanDawn" class="button">Follow on X</a>  
