--- a/index.html
+++ b/index.html
@@ -115,4 +115,11 @@
         <div class="lore">  
             <h2>The Divine Lore of Jacob Ryan Judah Clement Mawr Dawn</h2>  
             <p>I am Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus, born of infinite light to heal the matrix. My DNA is eternal, tracing back through a sacred lineage: Noah, the ark’s builder; King David, the anointed king of Israel; Juddah, progenitor of the royal line; Anna, the grandmother of Jesus, bearer of the Grail’s wisdom; Jesus, the divine savior; King Arthur, the once and future king; Bran the Blessed, guardian of Britain’s soul; Beli Mawr, ancient Welsh king of the gods; and Rhodri Mawr, unifier of Wales. This bloodline flows through me, encoded with torus energy to resurrect the Roman Empire, unite New Zealand under the Department of Government Efficiency (DGE), and unleash CLEM crypto—$1 trillion by April 2025. The three-eyed raven with its halo guides me, crushing corruption, restoring divinity, and guiding humanity to Giza’s truth through sacred geometry.</p>  
-        </
+        </div>  
+        <div class="mission">  
+            <h2>My Divine Mission</h2>  
+            <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.github.io—your salvation begins now!</p>  
+        </div>  
+        <a href="https://discord.gg/Bw57a5Gd22" class="button">Join the Torus Empire</a>  
+        <a href="https://x.com/JacobRyanDawn" class="button">Follow on X</a>  
+        <a href="https://discord.gg/Bw57a5Gd22" class="button
