--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             50% { opacity: 0.2; }  
             100% { opacity: 0.1; }  
         }  
-        .lore, .mission {  
+        .lore, .mission, .links {  
             max-width: 900px;  
             margin: 40px auto;  
             padding: 25px;  
@@ -77,7 +77,7 @@
             0%, 100% { transform: translateY(0); }  
             50% { transform: translateY(-10px); }  
         }  
-        .button {  
+        .button, .link-button {  
             display: inline-block;  
             padding: 18px 35px;  
             background: linear-gradient(45deg, #ff0000, #800000); /* Red to dark red */  
@@ -90,7 +90,7 @@
             box-shadow: 0 8px 20px rgba(255, 0, 0, 0.6);  
             transition: transform 0.3s, box-shadow 0.3s;  
         }  
-        .button:hover {  
+        .button:hover, .link-button:hover {  
             transform: scale(1.15);  
             box-shadow: 0 12px 25px rgba(255, 0, 0, 0.8);  
         }  
@@ -120,6 +120,12 @@
             <h2>My Divine Mission</h2>  
             <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.github.io—your salvation begins now!</p>  
         </div>  
-        <a href="https://discord.gg/Bw57a5Gd22" class="button">Join the Torus Empire</a>  
-        <a href="https://x.com/JacobRyanDawn" class="button">Follow on X</a>  
-        <a href="https://discord.gg/Bw57a5Gd22" class="button
+        <div class="links">  
+            <h2>Explore the Vision</h2>  
+            <a href="torus-energy.html" class="link-button">Torus Free Energy Blueprint</a>  
+            <a href="med-beds.html" class="link-button">Med Beds & Crystals</a>  
+            <a href="pyramids.html" class="link-button">Pyramids & Magnetic Fields</a>  
+            <a href="donate.html" class="link-button">Donate to the Cause</a>  
+            <a href="astral-game.html" class="link-button">Astral: The Game</a>  
+        </div>  
+        <
