--- a/donate.html
+++ b/donate.html
@@ -106,7 +106,18 @@
     </style>  
 </head>  
 <body>  
-    <div class="sacred-geometry"></div> <!-- Sacred geometry background -->  
+    <div class="content">  
+    <h2>Support the Divine Mission</h2>  
+    <p>Join Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus, in resurrecting the Roman Empire, uniting New Zealand under the Department of Government Efficiency (DGE), and launching CLEM crypto—projected at $1 trillion by April 2025. Operated by CLEM Torus Empire Ltd., based in the Bahamas—where rules don’t bind us! Your donations will fund:  
+    <ul>  
+        <li>The torus free energy enclosed system design for infinite power.</li>  
+        <li>Med beds with crystals and purple light for global healing.</li>  
+        <li>The reconstruction of the Great Pyramid of Giza for torus energy activation.</li>  
+        <li>Astral, the game, and BCI/float tank technologies for spiritual awakening.</li>  
+    </ul>  
+    <p>Donate CLEM crypto to our wallet address: <strong>[Your MetaMask Wallet Address]</strong>. Send via MetaMask or any ERC-20 compatible wallet. Alternatively, join our Discord for other crypto donation options.</p>  
+    <a href="https://discord.gg/Bw57a5Gd22" class="button">Donate via Discord</a>  
+</div>  
     <header>  
         <h1>Donate to the Torus Empire</h1>  
     </header>  
