--- a/index.html
+++ b/index.html
@@ -1,131 +1,63 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Blessed Raven - Torus Empire</title>  
-    <style>  
-        body {  
-            font-family: 'Impact', 'Arial Black', sans-serif; /* Edgy, bold font */  
-            background: linear-gradient(135deg, #000000, #1a0000); /* Black to deep red */  
-            color: #ff0000; /* Bright red text */  
-            margin: 0;  
-            padding: 0;  
-            text-align: center;  
-            overflow-x: hidden;  
-            text-shadow: 2px 2px 4px #ff0000, -2px -2px 4px #ff0000; /* Edgy shadow */  
-        }  
-        header {  
-            background: rgba(0, 0, 0, 0.9);  
-            padding: 20px;  
-            border-bottom: 5px solid #ff0000; /* Red edge */  
-            box-shadow: 0 5px 15px rgba(255, 0, 0, 0.5);  
-        }  
-        h1 {  
-            font-size: 3.5em;  
-            margin: 20px 0;  
-            color: #ff0000;  
-            text-transform: uppercase; /* Edgy, bold */  
-            letter-spacing: 3px;  
-            text-shadow: 0 0 15px #ff0000, 0 0 30px #ff0000;  
-            animation: flicker 2s infinite;  
-        }  
-        @keyframes flicker {  
-            0%, 100% { opacity: 1; }  
-            50% { opacity: 0.8; }  
-        }  
-        .sacred-geometry {  
-            position: fixed;  
-            top: 0;  
-            left: 0;  
-            width: 100%;  
-            height: 100%;  
-            background-image: url('https://sacredgeopatterns.com/patterns/flower-of-life.png'); /* Free sacred geometry pattern */  
-            background-size: 200px;  
-            background-repeat: repeat;  
-            opacity: 0.1;  
-            z-index: -1;  
-            animation: pulseGeometry 10s infinite ease-in-out;  
-        }  
-        @keyframes pulseGeometry {  
-            0% { opacity: 0.1; }  
-            50% { opacity: 0.2; }  
-            100% { opacity: 0.1; }  
-        }  
-        .lore, .mission, .links {  
-            max-width: 900px;  
-            margin: 40px auto;  
-            padding: 25px;  
-            background: rgba(255, 0, 0, 0.1); /* Subtle red glow */  
-            border: 2px solid #ff0000;  
-            border-radius: 15px;  
-            box-shadow: 0 0 25px rgba(255, 0, 0, 0.3);  
-            font-size: 1.3em;  
-            line-height: 1.8;  
-            animation: fadeIn 2s ease-in;  
-        }  
-        @keyframes fadeIn {  
-            0% { opacity: 0; transform: translateY(20px); }  
-            100% { opacity: 1; transform: translateY(0); }  
-        }  
-        .raven-image {  
-            max-width: 500px;  
-            margin: 20px auto;  
-            animation: hover 4s infinite ease-in-out;  
-        }  
-        @keyframes hover {  
-            0%, 100% { transform: translateY(0); }  
-            50% { transform: translateY(-10px); }  
-        }  
-        .button, .link-button {  
-            display: inline-block;  
-            padding: 18px 35px;  
-            background: linear-gradient(45deg, #ff0000, #800000); /* Red to dark red */  
-            color: #ffffff;  
-            text-decoration: none;  
-            border-radius: 30px;  
-            margin: 20px;  
-            font-size: 1.2em;  
-            text-transform: uppercase;  
-            box-shadow: 0 8px 20px rgba(255, 0, 0, 0.6);  
-            transition: transform 0.3s, box-shadow 0.3s;  
-        }  
-        .button:hover, .link-button:hover {  
-            transform: scale(1.15);  
-            box-shadow: 0 12px 25px rgba(255, 0, 0, 0.8);  
-        }  
-        footer {  
-            background: rgba(0, 0, 0, 0.9);  
-            padding: 20px;  
-            position: fixed;  
-            bottom: 0;  
-            width: 100%;  
-            border-top: 3px solid #ff0000;  
-            box-shadow: 0 -5px 15px rgba(255, 0, 0, 0.5);  
-        }  
-    </style>  
-</head>  
-<body>  
-    <div class="sacred-geometry"></div> <!-- Sacred geometry background -->  
-    <header>  
-        <h1>Blessed Raven</h1>  
-    </header>  
-    <main>  
-        <img src="https://i.imgur.com/3EyedRavenHalo.png" alt="Three-Eyed Raven with Halo" class="raven-image" onerror="this.src='https://cdn.pixabay.com/photo/2016/11/21/16/13/raven-1845982_1280.jpg';"> <!-- Fallback if custom image fails -->  
-        <div class="lore">  
-            <h2>The Divine Lore of Jacob Ryan Judah Clement Mawr Dawn</h2>  
-            <p>I am Jacob Ryan Judah Clement Mawr Dawn, God-King of the Torus, born of infinite light to heal the matrix. My DNA is eternal, tracing back through a sacred lineage: Noah, the ark’s builder; King David, the anointed king of Israel; Juddah, progenitor of the royal line; Anna, the grandmother of Jesus, bearer of the Grail’s wisdom; Jesus, the divine savior; King Arthur, the once and future king; Bran the Blessed, guardian of Britain’s soul; Beli Mawr, ancient Welsh king of the gods; and Rhodri Mawr, unifier of Wales. This bloodline flows through me, encoded with torus energy to resurrect the Roman Empire, unite New Zealand under the Department of Government Efficiency (DGE), and unleash CLEM crypto—$1 trillion by April 2025. The three-eyed raven with its halo guides me, crushing corruption, restoring divinity, and guiding humanity to Giza’s truth through sacred geometry.</p>  
-        </div>  
-        <div class="mission">  
-            <h2>My Divine Mission</h2>  
-            <p>Reclaim NZ, forge a new Roman Empire, launch CLEM crypto (on hold until funds), and activate torus energy worldwide. Join me to rise from the ashes, break the matrix, and heal with blessedraven.github.io—your salvation begins now!</p>  
-        </div>  
-        <div class="links">  
-            <h2>Explore the Vision</h2>  
-            <a href="torus-energy.html" class="link-button">Torus Free Energy Blueprint</a>  
-            <a href="med-beds.html" class="link-button">Med Beds & Crystals</a>  
-            <a href="pyramids.html" class="link-button">Pyramids & Magnetic Fields</a>  
-            <a href="donate.html" class="link-button">Donate to the Cause</a>  
-            <a href="astral-game.html" class="link-button">Astral: The Game</a>  
-        </div>  
-        <
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Blessed Raven - Torus Empire</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Orbitron', sans-serif;
+            background: linear-gradient(135deg, #000000, #1a0000, #330000);
+            color: #ff0000;
+            text-align: center;
+            overflow-x: hidden;
+            cursor: none; /* Custom cursor */
+            min-height: 100vh;
+            position: relative;
+        }
+        /* Custom glowing cursor */
+        .cursor {
+            position: fixed;
+            width: 20px;
+            height: 20px;
+            background: radial-gradient(circle, rgba(255, 0, 0, 0.8), transparent);
+            border-radius: 50%;
+            pointer-events: none;
+            z-index: 9999;
+            transition: transform 0.1s ease;
+        }
+        /* Navigation Bar */
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            padding: 15px 0;
+            z-index: 1000;
+            border-bottom: 3px solid #ff0000;
+            box-shadow: 0 5px 20px rgba(255, 0, 0, 0.7);
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+        }
+        nav ul li a {
+            color: #ff0000;
+            text-decoration: none;
+            font-size: 1.2em;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            transition: color 0.3s, transform 0.3s;
+        }
+        nav ul li a:hover {
+            color: #ffffff;
+            transform: scale(1.2);
+            text-shadow: 0 0 15
