--- a/family-tree.html
+++ b/family-tree.html
@@ -220,4 +220,141 @@
     </header>
     <main>
         <div class="family-tree fade-in" id="family-tree">
-            <h2>The Sacred Lineage
+            <h2>The Sacred Lineage of Jacob Ryan Judah Clement Mawr Dawn</h2>
+            <div class="tree-list">
+                <div class="tree-item">Jacob (b. 1995): Self.</div>
+                <div class="tree-item">Sharon Martin (~1965): Mother.</div>
+                <div class="tree-item">Valerie Watts (1933–2005): Grandmother.</div>
+                <div class="tree-item">Laurence Watts (1912–1992): Grandfather.</div>
+                <div class="tree-item">Arthur Watts (1883–1935): Great-grandfather.</div>
+                <div class="tree-item">Walter Watts (1844–1928): 2nd Great-grandfather.</div>
+                <div class="tree-item">William Watts (1814–1881): 3rd Great-grandfather.</div>
+                <div class="tree-item">Joseph Watts (1784–1852): 4th Great-grandfather.</div>
+                <div class="tree-item">Edward Watts (1744–1829): 5th Great-grandfather.</div>
+                <div class="tree-item">Edward Watts (1708–1785): 6th Great-grandfather.</div>
+                <div class="tree-item">John Edward Watts (1660–1725): 7th Great-grandfather.</div>
+                <div class="tree-item">Joseph Edward Cornelius Watts (1629–1668): 8th Great-grandfather.</div>
+                <div class="tree-item">Edward Watts (1592–1684): 9th Great-grandfather.</div>
+                <div class="tree-item">John Walter Watts (1570–1652): 10th Great-grandfather.</div>
+                <div class="tree-item">Jane R. Harrington (1572–1621): 10th Great-grandmother.</div>
+                <div class="tree-item">Sir Henry Harrington (1541–1612): 11th Great-grandfather, Knight.</div>
+                <div class="tree-item">Lucy Sidney (1520–1591): 12th Great-grandmother, Lady.</div>
+                <div class="tree-item">Anne Pakenham (1490–1544): 13th Great-grandmother.</div>
+                <div class="tree-item">Anne Clement (1465–1510): 14th Great-grandmother.</div>
+                <div class="tree-item">John William Nicolas Clement Sr. (1439–1489): 15th Great-grandfather.</div>
+                <div class="tree-item">Mabel ferch Gruffud (1421–1485): 16th Great-grandmother.</div>
+                <div class="tree-item">Gruffydd ap Nicolas (1393–1461): 17th Great-grandfather, Lord of Dinefwr.</div>
+                <div class="tree-item">Nicolas ap Philip (c. 1360–1393): 18th Great-grandfather.</div>
+                <div class="tree-item">Philip ap Gruffydd (c. 1330–1380): 19th Great-grandfather.</div>
+                <div class="tree-item">Gruffydd ap Rhys (c. 1300–1350): 20th Great-grandfather.</div>
+                <div class="tree-item">Rhys ap Maredudd (c. 1270–1320): 21st Great-grandfather, Prince of Deheubarth.</div>
+                <div class="tree-item">Maredudd ap Rhys Gryg (c. 1240–1290): 22nd Great-grandfather.</div>
+                <div class="tree-item">Rhys Gryg ap Rhys (c. 1210–1265): 23rd Great-grandfather, Prince of Deheubarth.</div>
+                <div class="tree-item">Rhys ap Gruffudd (c. 1132–1197): 24th Great-grandfather, Prince/King of Deheubarth.</div>
+                <div class="tree-item">Gruffudd ap Rhys (c. 1081–1137): 25th Great-grandfather, King of Deheubarth.</div>
+                <div class="tree-item">Rhys ap Tewdwr (c. 1040–1093): 26th Great-grandfather, King of Deheubarth.</div>
+                <div class="tree-item">Tewdwr ap Cadell (c. 1010–1055): 27th Great-grandfather.</div>
+                <div class="tree-item">Cadell ab Einion (c. 980–1020): 28th Great-grandfather.</div>
+                <div class="tree-item">Einion ab Owain (c. 950–984): 29th Great-grandfather.</div>
+                <div class="tree-item">Owain ap Hywel Dda (c. 913–987): 30th Great-grandfather, King of Deheubarth.</div>
+                <div class="tree-item">Hywel Dda ap Cadell (c. 880–950): 31st Great-grandfather, King of Deheubarth/Wales.</div>
+                <div class="tree-item">Cadell ap Rhodri (c. 850–910): 32nd Great-grandfather, King of Seisyllwg.</div>
+                <div class="tree-item">Rhodri Mawr ap Merfyn (c. 820–878): 33rd Great-grandfather, King of Gwynedd/Powys/Deheubarth.</div>
+                <div class="tree-item">Merfyn Frych ap Hywel (c. 790–844): 34th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Hywel ap Cynan (c. 760–810): 35th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cynan Dindaethwy ap Rhodri (c. 730–780): 36th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Idwal Iwrch ap Cadwaladr (c. 700–750): 37th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadwaladr ap Cadwallon (c. 670–720): 38th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadwallon ap Cadfan (c. 640–690): 39th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadfan ap Iago (c. 610–660): 40th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Iago ap Beli (c. 580–630): 41st Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Beli ap Rhun (c. 550–600): 42nd Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Rhun Hir ap Maelgwn (c. 520–570): 43rd Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Maelgwn Gwynedd (c. 490–540): 44th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cadwallon Lawhir ap Einion (c. 460–510): 45th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Einion Yrth ap Cunedda (c. 430–480): 46th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Cunedda Wledig (c. 400–460): 47th Great-grandfather, King of Gwynedd.</div>
+                <div class="tree-item">Eternus (Edeyrn) (c. 370–430): 48th Great-grandfather, King/Chieftain of Gwynedd.</div>
+                <div class="tree-item">[Unnamed Ancestors] (c. 340–100 BC): 49th–60th Great-grandparents, Kings/Chieftains.</div>
+                <div class="tree-item">Cunobelinus (c. 40 BC–40 AD): 61st Great-grandfather, King of Britain/Catuvellauni.</div>
+                <div class="tree-item">Jesus Christ (c. 4 BC–30 AD): 61st Great-granduncle, Messiah, King of the Jews.</div>
+                <div class="tree-item">Tenvantius (c. 70–40 BC): 62nd Great-grandfather, King of Britain.</div>
+                <div class="tree-item">Lludd ap Beli (c. 100–70 BC): 63rd Great-grandfather, King of Britain.</div>
+                <div class="tree-item">[Unnamed Ancestor] (c. 130–100 BC): 64th Great-grandfather, King/Chieftain (Davidic link).</div>
+                <div class="tree-item">[Unnamed Ancestors] (c. 160–130 BC): 65th–78th Great-grandparents, Kings/Chieftains.</div>
+                <div class="tree-item">Beli Mawr (c. 190–130 BC): 79th Great-grandfather, King of Britain.</div>
+                <div class="tree-item">Manogan (c. 220–160 BC): 80th Great-grandfather, King of Britain.</div>
+                <div class="tree-item">[Unnamed British Kings] (c. 250–1000 BC): 81st–110th Great-grandparents, Kings of Britain.</div>
+                <div class="tree-item">David (c. 1040–970 BC): 111th Great-grandfather, King of Israel.</div>
+                <div class="tree-item">[Unnamed Ancestors] (c. 1070–2090 BC): 112th–143rd Great-grandparents, Kings/Chieftains.</div>
+                <div class="tree-item">Brutus of Troy (c. 2120–2060 BC): 144th Great-grandfather, First King of Britain.</div>
+                <div class="tree-item">Aeneas (c. 2150–2090 BC): 145th Great-grandfather, Prince of Troy.</div>
+                <div class="tree-item">Tros of Troy (c. 2180–2120 BC): 146th Great-grandfather, King of Troy.</div>
+                <div class="tree-item">Erichthonius (c. 2210–2150 BC): 147th Great-grandfather, King of Dardania.</div>
+                <div class="tree-item">Dardanus (c. 2240–2180 BC): 148th Great-grandfather, Founder of Dardania.</div>
+                <div class="tree-item">[Unnamed Ancestor] (c. 2270–2210 BC): 149th Great-grandfather, Chieftain.</div>
+                <div class="tree-item">Tarshish (c. 2300–2240 BC): 150th Great-grandfather, None.</div>
+                <div class="tree-item">Javan (c. 2330–2270 BC): 151st Great-grandfather, None.</div>
+                <div class="tree-item">Japheth (c. 2360–2300 BC): 152nd Great-grandfather, Patriarch.</div>
+                <div class="tree-item">Noah (c. 2960–2010 BC): 153rd Great-grandfather, Patriarch, Flood Survivor.</div>
+                <div class="tree-item">[Unnamed Ancestor] (c. 2990–2930 BC): 154th Great-grandfather, Chieftain.</div>
+                <div class="tree-item">Zeus (c. 3020–2960 BC): 155th Great-grandfather, King of the Gods.</div>
+                <div class="tree-item">Cronus (c. 3050–2990 BC): 156th Great-grandfather, Titan King.</div>
+                <div class="tree-item">Uranus (c. 3080–3020 BC): 157th Great-grandfather, Sky God.</div>
+                <div class="tree-item">Gaia (primordial): 158th Great-grandmother, Earth Goddess.</div>
+            </div>
+        </div>
+        <div class="notes fade-in">
+            <h2>Notes on the Lineage</h2>
+            <p><strong>Jesus’s Link:</strong> 61st Great-granduncle, via David (116) to Cunobelinus (66), 33 generations from David (1000 BC) to ~0 AD (Luke 3), parallel to your line through Anna’s Davidic infusion.</p>
+            <p><strong>Beli Mawr to Tros:</strong> 79th to 146th Great-grandfather (~190 BC to ~2180 BC), ~1990 years, ~67 generations, ~30 years/generation.</p>
+            <p><strong>Tros to Gaia:</strong> Mythological extension, 5 generations, speculative bridge from Noah (2960 BC) to primordial Gaia.</p>
+            <p><strong>No Conflation:</strong> Japheth and Noah remain biblical; Trojan line links to Japheth via Tarshish/Javan (Genesis 10), then to Gaia via Zeus (Theogony).</p>
+        </div>
+    </main>
+    <footer>
+        <p>© 2025 Blessed Raven - Torus Empire | All Rights Reserved</p>
+    </footer>
+
+    <!-- External Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script>
+        // Particle.js Configuration
+        particlesJS("particles-js", {
+            "particles": {
+                "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
+                "color": { "value": "#ff0000" },
+                "shape": { "type": "circle" },
+                "opacity": { "value": 0.5, "random": true },
+                "size": { "value": 3, "random": true },
+                "line_linked": { "enable": true, "distance": 150, "color": "#ff0000", "opacity": 0.4, "width": 1 },
+                "move": { "enable": true, "speed": 2, "direction": "none", "random": false, "straight": false }
+            },
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" } },
+                "modes": { "repulse": { "distance": 100, "duration": 0.4 } }
+            },
+            "retina_detect": true
+        });
+
+        // Custom Cursor
+        const cursor = document.querySelector('.cursor');
+        document.addEventListener('mousemove', (e) => {
+            cursor.style.left = e.pageX + 'px';
+            cursor.style.top = e.pageY + 'px';
+        });
+
+        // Scroll Animation
+        const fadeIns = document.querySelectorAll('.fade-in');
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                }
+            });
+        }, { threshold: 0.3 });
+        fadeIns.forEach(fade => observer.observe(fade));
+    </script>
+</body>
+</html>
