--- a/family-tree.html
+++ b/family-tree.html
@@ -21,7 +21,6 @@
             min-height: 100vh;
             position: relative;
         }
-        /* Custom glowing cursor */
         .cursor {
             position: fixed;
             width: 20px;
@@ -32,7 +31,6 @@
             z-index: 9999;
             transition: transform 0.1s ease;
         }
-        /* Navigation Bar */
         nav {
             position: fixed;
             top: 0;
@@ -81,25 +79,35 @@
             0%, 100% { opacity: 1; text-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000; }
             50% { opacity: 0.85; text-shadow: 0 0 10px #ff0000; }
         }
-        /* Celtic Tree Background */
-        .celtic-tree {
+        /* Replace Celtic Tree with CSS Pattern */
+        .celtic-pattern {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://i.imgur.com/celtic-tree-of-life.png') center center no-repeat;
-            background-size: 50%;
-            opacity: 0.2;
+            background: repeating-linear-gradient(
+                45deg,
+                rgba(255, 0, 0, 0.2),
+                rgba(255, 0, 0, 0.2) 10px,
+                transparent 10px,
+                transparent 20px
+            ),
+            repeating-linear-gradient(
+                -45deg,
+                rgba(255, 0, 0, 0.2),
+                rgba(255, 0, 0, 0.2) 10px,
+                transparent 10px,
+                transparent 20px
+            );
+            opacity: 0.15;
             z-index: -1;
-            filter: hue-rotate(0deg) saturate(100%) brightness(80%);
-            animation: pulseTree 10s infinite ease-in-out;
+            animation: pulsePattern 10s infinite ease-in-out;
         }
-        @keyframes pulseTree {
-            0%, 100% { opacity: 0.2; transform: scale(1); }
-            50% { opacity: 0.3; transform: scale(1.05); }
+        @keyframes pulsePattern {
+            0%, 100% { opacity: 0.15; }
+            50% { opacity: 0.25; }
         }
-        /* Sacred Geometry Overlay */
         .sacred-geometry {
             position: fixed;
             top: 0;
@@ -116,7 +124,6 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        /* Particle Background */
         #particles-js {
             position: fixed;
             width: 100%;
@@ -129,7 +136,7 @@
             max-width: 1200px;
             margin: 60px auto;
             padding: 40px;
-            background: rgba(255, 0, 0, 0.15);
+            background: rgba(0, 0, 0, 0.85); /* Darker background for better contrast */
             border: 3px solid #ff0000;
             border-radius: 20px;
             box-shadow: 0 0 40px rgba(255, 0, 0, 0.5);
@@ -153,11 +160,11 @@
             text-align: left;
         }
         .tree-item {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(255, 0, 0, 0.2); /* Slightly red-tinted background */
             padding: 15px;
             border: 1px solid #ff0000;
             border-radius: 10px;
-            color: #ffcccc;
+            color: #ffffff; /* White text for better readability */
             font-size: 1.1em;
             transition: transform 0.3s, box-shadow 0.3s;
         }
@@ -169,7 +176,7 @@
             max-width: 1000px;
             margin: 40px auto;
             padding: 20px;
-            background: rgba(255, 0, 0, 0.1);
+            background: rgba(0, 0, 0, 0.85);
             border: 2px solid #ff0000;
             border-radius: 15px;
             color: #ffcccc;
@@ -186,7 +193,6 @@
             color: #ffcccc;
             font-size: 1.1em;
         }
-        /* Scroll Animation */
         .fade-in {
             opacity: 0;
             transform: translateY(50px);
@@ -199,19 +205,15 @@
     </style>
 </head>
 <body>
-    <!-- Particle Background -->
     <div id="particles-js"></div>
-    <!-- Sacred Geometry -->
     <div class="sacred-geometry"></div>
-    <!-- Celtic Tree Background -->
-    <div class="celtic-tree"></div>
-    <!-- Custom Cursor -->
+    <div class="celtic-pattern"></div> <!-- Updated to CSS pattern -->
     <div class="cursor"></div>
-    <!-- Navigation -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#family-tree">Family Tree</a></li>
+            <li><a href="torus-energy.html">Torus Energy</a></li>
             <li><a href="donate.html">Donate</a></li>
         </ul>
     </nav>
@@ -316,10 +318,8 @@
         <p>© 2025 Blessed Raven - Torus Empire | All Rights Reserved</p>
     </footer>
 
-    <!-- External Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
-        // Particle.js Configuration
         particlesJS("particles-js", {
             "particles": {
                 "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
@@ -338,14 +338,12 @@
             "retina_detect": true
         });
 
-        // Custom Cursor
         const cursor = document.querySelector('.cursor');
         document.addEventListener('mousemove', (e) => {
             cursor.style.left = e.pageX + 'px';
             cursor.style.top = e.pageY + 'px';
         });
 
-        // Scroll Animation
         const fadeIns = document.querySelectorAll('.fade-in');
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
